--- a/members.html
+++ b/members.html
@@ -1,22 +1,11 @@
-<!doctype html>
-<html lang="ja">
-<head>
-  <meta charset="UTF-8">
-  <title>Header Sample</title>
-  <link rel="stylesheet" href="members_style.css">
-</head>
-<body>
-  <header>
-    <h1 class="title">タイトル</h1>
-    <nav class="nav">
-      <ul class="menu-group">
-        <li class="menu-item"><a href="#">項目1</a></li>
-        <li class="menu-item"><a href="#">項目2</a></li>
-        <li class="menu-item"><a href="#">項目3</a></li>
-        <li class="menu-item"><a href="#">項目4</a></li>
-        <li class="menu-item"><a href="#">項目5</a></li>
-      </ul>
-    </nav>
-  </header>
-</body>
-</html>
+<header>
+　<ul>
+　　<li><a href="#" class="btn2">Members</a></li>
+　　<li><a href="#" class="btn4">Guideline</a></li>
+　　<li><a href="#" class="btn4">車両のご案内</a></li>
+　　<li><a href="#" class="btn4">ご利用事例</a></li>
+　　<li><a href="#" class="btn4">よくある質問</a></li>
+　　<li><a href="#" class="btn4">お問い合わせ</a></li>
+　　<li><a href="#" class="btn4">Contact</a></li>
+　</ul>
+</header>
