--- a/members.html
+++ b/members.html
@@ -1,3 +1,11 @@
+<!doctype html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <title>Header Sample</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
 <header>
 　<ul>
 　　<li><a href="#" class="btn2">Members</a></li>
@@ -9,3 +17,5 @@
 　　<li><a href="#" class="btn4">Contact</a></li>
 　</ul>
 </header>
+</body>
+</html>
