--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="ja">
-　　<head>
-　　　　<meta charset="UTF-8" />
-　　　　<title>ゴリゴリコード</title>
-　　　　<meta name="viewport" content="width=device-width, initial-scale=1" />
-　　　　<meta name="description" content="実況グループ ラナンスターの公式ホームページ" />
-　　　　<link href="css/style.css" rel="stylesheet"/>
+<html>
+
+<head>
+        <meta charset="utf-8">
+    <title>Dragon-k</title>
+    <link rel="stylesheet" href="stylesheet.css">
+</head>
 <body>
 <header class="header">
   <div class="header-inner inner">
