--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
         <meta charset="utf-8">
     <title>Dragon-k</title>
-    <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header class="header">
