--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <header class="header">
   <div class="header-inner inner">
-    <h1 class="header-title"><a href="#">GORIGORICODE</a></h1>
+    <h1 class="header-title"><a href="#">RanunStar</a></h1>
     <nav class="header-nav">
       <ul class="header-nav-list">
         <li class="header-nav-item"><a class="header-nav-item-link" href="#">About</a></li>
