--- a/index.html
+++ b/index.html
@@ -8,17 +8,15 @@
 </head>
 <body>
 <header class="header">
-  <div class="header-inner inner">
-    <h1 class="header-title"><a href="#">RanunStar</a></h1>
-    <nav class="header-nav">
-      <ul class="header-nav-list">
-        <li class="header-nav-item"><a class="header-nav-item-link" href="#">About</a></li>
-        <li class="header-nav-item"><a class="header-nav-item-link" href="#">Service</a></li>
-        <li class="header-nav-item"><a class="header-nav-item-link" href="#">News</a></li>
-        <li class="header-nav-item"><a class="header-nav-item-link" href="#">Blog</a></li>
-        <li class="header-nav-item"><a class="header-nav-item-link" href="#">Contact</a></li>
-      </ul>
-    </nav>
+  <nav class="navigation">
+    <ul>
+      <li><a href="">HOME</a></li>
+      <li><a href="">ABOUT</a></li>
+      <li><a href="">CONTACT</a></li>
+    </ul>
+  </nav>
+  <div class="title-wrapper">
+    <h1>これはヘッダーです</h1>
   </div>
 </header>
 </body>
