--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
 <header class="header">
   <nav class="navigation">
     <ul>
-      <li><a href="">HOME</a></li>
-      <li><a href="">ABOUT</a></li>
-      <li><a href="">CONTACT</a></li>
+      <li><a href="">Members</a></li>
+      <li><a href="">Guideline</a></li>
+      <li><a href="">Contact</a></li>
     </ul>
   </nav>
   <div class="title-wrapper">
-    <h1>これはヘッダーです</h1>
   </div>
 </header>
 </body>
