--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
   <div class="title-wrapper">
   </div>
 </header>
+        
+<img src="ranunstar_member.png" width=100 height=100 alt="ラナンスターメンバー">
+        
 </body>
 </html>
