--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
   <div class="title-wrapper">
   </div>
 </header>
-        
+
+<div class="pixiv-class1">
 <img src="ranunstar_member.png" width=1300 height=260 alt="ラナンスターメンバー">
+</div>
         
 </body>
 </html>
