--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </header>
 
 <div class="pixiv-class1">
-<img src="ranunstar_member.png" width=1290 height=400 alt="ラナンスターメンバー">
+<img src="ranunstar_member.png" class="pixiv-class2">
 </div>
         
 </body>
