--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
   </div>
 </header>
 
-<div class="pixiv-class1">
-<img src="ranunstar_member.png" class="pixiv-class2">
-</div>
+<img src="ranunstar_member.png" width=1280 height=360>
         
 </body>
 </html>
