--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   </div>
 </header>
 
+<div lass="pixiv1">
 <img src="ranunstar_member.png" width=1280 height=360 align="top">
+</div>
         
 </body>
 </html>
