--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </header>
 
 <div class="pixiv1">
-<img src="ranunstar_member.png" width=1280 height=360 align="top">
+<img src="ranunstar_member.png" width=1280 height=360>
 </div>
         
 </body>
