--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <header class="header">
   <nav class="navigation">
     <ul>
+            <font face=”HeadLineA”>
       <li><a href="">Members</a></li>
       <li><a href="">Guideline</a></li>
       <li><a href="">Contact</a></li>
+            </font>
     </ul>
   </nav>
   <div class="title-wrapper">
