--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <nav class="navigation">
     <ul>
       <li><a href="">Members</a></li>
+      <li><a href="">Videos</a></li>
       <li><a href="">Guideline</a></li>
+      <li><a href="">History</a></li>
       <li><a href="">Contact</a></li>
     </ul>
   </nav>
