--- a/guideline.html
+++ b/guideline.html
@@ -10,10 +10,10 @@
 <header class="header">
   <nav class="navigation">
     <ul>
-      <li><a href="">Members</a></li>
-      <li><a href="">Videos</a></li>
-      <li><a href="">Guideline</a></li>
-      <li><a href="">History</a></li>
+      <li><a href="index.html">Members</a></li>
+      <li><a href="videos.html">Videos</a></li>
+      <li><a href="guideline.html">Guideline</a></li>
+      <li><a href="history.html">History</a></li>
       <li><a href="">Contact</a></li>
     </ul>
   </nav>
