--- a/guideline.html
+++ b/guideline.html
@@ -25,5 +25,8 @@
 <img src="ranunstar_guideline.png" width=1264 height=360>
 </div>
         
+<div class="fuchidori>ラナンスター二次創作ガイドライン</div>
+
+        
 </body>
 </html>
