--- a/guideline.html
+++ b/guideline.html
@@ -25,7 +25,9 @@
 <img src="ranunstar_guideline.png" width=1264 height=360>
 </div>
         
-<div class="fuchidori>ラナンスター二次創作ガイドライン</div>
+<div class="fuchidori>
+<h1>ラナンスター二次創作ガイドライン</h1>
+</div>
 
         
 </body>
