--- a/videos.html
+++ b/videos.html
@@ -22,7 +22,7 @@
 </header>
 
 <div class="pixiv1">
-<img src="ranunstar_videos.png" width=1264 height=360>
+<img src="ranunstar_videos.png">
 </div>
         
 </body>
