--- a/history.html
+++ b/history.html
@@ -22,7 +22,7 @@
 </header>
 
 <div class="pixiv1">
-<img src="ranunstar_history.png" width=1264 height=360>
+<img src="ranunstar_history.png">
 </div>
         
 </body>
