--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
 <img src="ranunstar_member.png">
 </div>
 
-<h1>これはテストでぇーす</h1>
+        
+<a href="#" class="dk_pix">
+    <img width="200" src="どらけーボタン.png" alt="どらけー">
+</a>
 
         
 </body>
