--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </div>
 
         
-<a href="#" class="dk_pix">
+<a href="page_dk.html" class="dk_pix">
     <img width="200" src="どらけーボタン.png" alt="どらけー">
 </a>
 
