--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 <a href="page_dk.html" class="dk_pix">
     <img width="200" src="どらけーボタン.png" alt="どらけー">
 </a>
+<a href="page_dk.html" class="mike_pix">
+    <img width="200" src="いえみけボタン.png" alt="いえみけ">
+</a>
 
         
 </body>
