--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 
         
 <a href="page_dk.html" class="dk_pix">
-    <img width="20%" src="どらけーボタン.png" alt="どらけー">
+    <img src="どらけーボタン.png" alt="どらけー">
 </a>
 <a href="page_dk.html" class="mike_pix">
-    <img width="20%" src="いえみけボタン.png" alt="いえみけ">
+    <img src="いえみけボタン.png" alt="いえみけ">
 </a>
 
         
