--- a/index.html
+++ b/index.html
@@ -32,7 +32,12 @@
 <a href="page_dk.html" class="mike_pix">
     <img src="いえみけボタン.png" alt="いえみけ">
 </a>
-
+<a href="page_dk.html" class="nez_pix">
+    <img src="ねず～ボタン.png" alt="ねず～">
+</a>
+<a href="page_dk.html" class="ren_pix">
+    <img src="レンドリーボタン.png" alt="レンドリー">
+</a>
         
 </body>
 </html>
