--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
 </div>
 
         
-<a href="page_dk.html" class="dk_pix">
+<a href="page_dk.html" class="menber_pix">
     <img src="どらけーボタン.png" alt="どらけー">
 </a>
-<a href="page_dk.html" class="mike_pix">
+<a href="page_dk.html" class="menber_pix">
     <img src="いえみけボタン.png" alt="いえみけ">
 </a>
-<a href="page_dk.html" class="nez_pix">
+<a href="page_dk.html" class="menber_pix">
     <img src="ねず～ボタン.png" alt="ねず～">
 </a>
-<a href="page_dk.html" class="ren_pix">
+<a href="page_dk.html" class="menber_pix">
     <img src="レンドリーボタン.png" alt="レンドリー">
 </a>
         
