--- a/index.html
+++ b/index.html
@@ -38,6 +38,18 @@
 <a href="page_dk.html" class="menber_pix">
     <img src="レンドリーボタン.png" alt="レンドリー">
 </a>
+<a href="page_dk.html" class="menber2_pix">
+    <img src="しなききボタン.png" alt="しなきき">
+</a>
+<a href="page_dk.html" class="menber2_pix">
+    <img src="くろっくボタン.png" alt="くろっく">
+</a>
+<a href="page_dk.html" class="menber2_pix">
+    <img src="ともるんボタン.png" alt="ともるん">
+</a>
+<a href="page_dk.html" class="menber2_pix">
+    <img src="あんこボタン.png" alt="あんこ">
+</a>
         
 </body>
 </html>
