--- a/guideline.html
+++ b/guideline.html
@@ -10,7 +10,8 @@
 <header class="header">
   <nav class="navigation">
     <ul>
-      <li><a href="index.html">Members</a></li>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="member.html">Members</a></li>
       <li><a href="videos.html">Videos</a></li>
       <li><a href="guideline.html">Guideline</a></li>
       <li><a href="history.html">History</a></li>
