--- a/guideline.html
+++ b/guideline.html
@@ -11,10 +11,13 @@
   <nav class="navigation">
     <ul>
       <li><a href="index.html">Home</a></li>
+      <li><a href="news.html">Members</a></li>
       <li><a href="member.html">Members</a></li>
       <li><a href="videos.html">Videos</a></li>
-      <li><a href="guideline.html">Guideline</a></li>
       <li><a href="history.html">History</a></li>
+      <li><a href="goods.html">Goods</a></li>
+      <li><a href="guideline.html">Guideline</a></li>
+      <li><a href="membership.html">Membership</a></li>
       <li><a href="">Contact</a></li>
     </ul>
   </nav>
@@ -23,12 +26,9 @@
 </header>
 
 <div class="pixiv1">
-<img src="ranunstar_guideline.png">
+<img src="いえみけバナー.png">
 </div>
         
-<div class="fuchidori>
-<h1>ラナンスター二次創作ガイドライン</h1>
-</div>
 
         
 </body>
