--- a/videos.html
+++ b/videos.html
@@ -18,7 +18,7 @@
       <li><a href="goods.html">Goods</a></li>
       <li><a href="guideline.html">Guideline</a></li>
       <li><a href="membership.html">Membership</a></li>
-      <li><a href="">Contact</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
   <div class="title-wrapper">
