--- a/goods.html
+++ b/goods.html
@@ -11,7 +11,7 @@
   <nav class="navigation">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="news.html">Members</a></li>
+      <li><a href="news.html">News</a></li>
       <li><a href="member.html">Members</a></li>
       <li><a href="videos.html">Videos</a></li>
       <li><a href="history.html">History</a></li>
@@ -26,7 +26,7 @@
 </header>
 
 <div class="pixiv1">
-<img src="レンドリーバナー.png">
+<img src="goods.png">
 </div>
         
 </body>
