--- a/membership.html
+++ b/membership.html
@@ -33,7 +33,7 @@
 <div class="box29">
     <div class="box-title">メンバーの呟き</div>
         
-		<p font size="3">ここでは不定期更新でラナンメンバーが近況報告を呟きます</font></p>
+		<p font size="3">不定期更新でラナンメンバーが近況報告を呟きます</font></p>
         <p font size="3">更に過去に投稿された動画の感想も書かれているので、ラナンファンは是非見に行くべし!!</font></p>
 <p font size="4">下のボタンからそれぞれのメンバーの呟きを見に行けます</font></p>
 
