--- a/membership.html
+++ b/membership.html
@@ -40,8 +40,19 @@
 	
 <a href="https://www.youtube.com/channel/UCKic1W5YQtznd-iVM_A1aYQ" class="btn btn--orange btn--cubic btn--shadow">どらけーのつぶやき</a>
 
-
 <a href="https://www.youtube.com/channel/UC9cv-fiW0I87Ll-iw0Wa4dA" class="btn btn--orange btn--cubic btn--shadow">ともるんのつぶやき</a>
+
+<a href="https://www.youtube.com/channel/UC9cv-fiW0I87Ll-iw0Wa4dA" class="btn btn--orange btn--cubic btn--shadow">ねず〜のつぶやき</a>
+
+<a href="https://www.youtube.com/channel/UCKic1W5YQtznd-iVM_A1aYQ" class="btn btn--orange btn--cubic btn--shadow">いえみけのつぶやき</a>
+
+<a href="https://www.youtube.com/channel/UCKic1W5YQtznd-iVM_A1aYQ" class="btn btn--orange btn--cubic btn--shadow">レンドリーのつぶやき</a>
+
+<a href="https://www.youtube.com/channel/UC9cv-fiW0I87Ll-iw0Wa4dA" class="btn btn--orange btn--cubic btn--shadow">あんこのつぶやき</a>
+
+<a href="https://www.youtube.com/channel/UCKic1W5YQtznd-iVM_A1aYQ" class="btn btn--orange btn--cubic btn--shadow">しなききのつぶやき</a>
+
+<a href="https://www.youtube.com/channel/UC9cv-fiW0I87Ll-iw0Wa4dA" class="btn btn--orange btn--cubic btn--shadow">くろっくのつぶやき</a>
 
 <p font size="3">感想はtwitterにて #ラナン タグをつけて投稿お願いします!!</font></p>
         
