--- a/membership.html
+++ b/membership.html
@@ -33,9 +33,9 @@
 <div class="box29">
     <div class="box-title">メンバーの呟き</div>
         
-		<p font size="3">不定期更新でラナンメンバーが近況報告を呟きます</font></p>
-        <p font size="3">更に過去に投稿された動画の感想も書かれているので、ラナンファンは是非見に行くべし!!</font></p>
-<p font size="4">下のボタンからそれぞれのメンバーの呟きを見に行けます</font></p>
+		<p><font size="3">不定期更新でラナンメンバーが近況報告を呟きます</font></p>
+        <p><font size="3">更に過去に投稿された動画の感想も書かれているので、ラナンファンは是非見に行くべし!!</font></p>
+<p><font size="4">下のボタンからそれぞれのメンバーの呟きを見に行けます</font></p>
 
 	
 <a href="https://www.youtube.com/channel/UCKic1W5YQtznd-iVM_A1aYQ" class="btn btn--orange btn--cubic btn--shadow">どらけーのつぶやき</a>
@@ -54,7 +54,7 @@
 
 <a href="https://www.youtube.com/channel/UC9cv-fiW0I87Ll-iw0Wa4dA" class="btn btn--orange btn--cubic btn--shadow">くろっくのつぶやき</a>
 
-<p font size="3">感想はtwitterにて #ラナン タグをつけて投稿お願いします!!</font></p>
+<p><font size="3">感想はtwitterにて #ラナン タグをつけて投稿お願いします!!</font></p>
         
 </div>
 
