Update and rename dk1 to dk1.html

--- a/dk1.html
+++ b/dk1.html
@@ -31,12 +31,17 @@
 <p><font size="3">どもっす、どらけーです</font></p>
 <p><font size="3">えーっと、初投稿となると何喋ればええんか分からんくなりますね、まあまずは</font></p>
 <p><font size="8">ホームページ公開！！</font></p>
-<p><font size="3">ということでね、最初のブロマガは私が担当させていただきます</font></p>
+<p><font size="3">ということでね、最初のブロマガは私が担当します</font></p>
 <p><font size="3">今回はラナンスターの動画編集のことについてでも喋りましょうか</font></p>
-<p><font size="3">編集が間に合わなくてともるんに怒られたり</font></p>
-<p><font size="3">編集が間に合わなくてくろっくに圧かけられたり</font></p>
-<p><font size="3">編集が間に合わなくてレンドリーにめちゃめちゃ遊ばれたり</font></p>
-<p><font size="3">この話やめよか</font></p>
+<p><font size="5">実はラナンスターの動画って、活動開始の半年くらい前からちょっとずつ作ってたんですよ</font></p>
+<p><font size="3">確か10月ごろやろか?　「実績王は誰だ」という動画の編集が一番記憶に残ってます</font></p>
+<p><font size="5">3分の努力を3秒で全て失うレンドリー面白かったですね(笑)</font></p>
+<p><font size="3">オープニング制作が遅れて他の編集担当に怒られたり...</font></p>
+<p><font size="3">編集が間に合わなくてキアラさんに圧かけられたり...</font></p>
+<p><font size="3">編集が間に合わなくてともるんに圧かけられたり...</font></p>
+<p><font size="3">いろいろあったなぁ...うん、この話やめよか</font></p>
+
+<p><font size="3">ということで、さっき話題に上げた実績王は誰だについて話します</font></p>
     
 </div>
 
