--- a/dk1.html
+++ b/dk1.html
@@ -26,7 +26,7 @@
 </header>
 
 <div class="box29">
-    <div class="box-title">執筆者：どらけー</div>
+    <div class="box-title">祝 ホームページ公開!!  執筆者：どらけー</div>
     
 <p><font size="3">どもっす、どらけーです</font></p>
 <p><font size="3">えーっと、初投稿となると何喋ればええんか分からんくなりますね、まあまずは</font></p>
