--- a/membership.html
+++ b/membership.html
@@ -38,7 +38,7 @@
 <p><font size="4">下のボタンからそれぞれのメンバーの呟きを見に行けます</font></p>
 
 	
-<a href="https://www.youtube.com/channel/UCKic1W5YQtznd-iVM_A1aYQ" class="btn btn--orange btn--cubic btn--shadow">どらけーのつぶやき</a>
+<a href="dk_burogu.html" class="btn btn--orange btn--cubic btn--shadow">どらけーのつぶやき</a>
 
 <a href="https://www.youtube.com/channel/UC9cv-fiW0I87Ll-iw0Wa4dA" class="btn btn--orange btn--cubic btn--shadow">ともるんのつぶやき</a>
 
