--- a/nez_burogu.html
+++ b/nez_burogu.html
@@ -33,7 +33,7 @@
 <div class="box2">
     <div class="box-title">ねず〜の呟き</div>
         
-<a href="dk1.html">祝　ホームページ開設</a>
+<a href="nez1.html">ホームページ開設おめでとうございます!</a>
         
 </div>
 
