--- a/membership.html
+++ b/membership.html
@@ -46,6 +46,8 @@
 
 <a href="mike_burogu.html" class="btn btn--orange btn--cubic btn--shadow">いえみけのつぶやき (0)</a>
 
+<p><font size="3"> </font></p>
+	
 <a href="ren_burogu.html" class="btn btn--orange btn--cubic btn--shadow">レンドリーのつぶやき (0)</a>
 
 <a href="anc_burogu.html" class="btn btn--orange btn--cubic btn--shadow">あんこのつぶやき (0)</a>
