--- a/dk1.html
+++ b/dk1.html
@@ -26,9 +26,10 @@
 </header>
 
 <div class="box2">
-    <div class="box-title">祝 ホームページ公開!!  執筆者：どらけー</div>
-    
-<p><font size="3">どもっす、どらけーです</font></p>
+    <div class="box-title">祝 ホームページ公開!!  執筆者：どらけー　　　2022 10/31</div>
+
+<p><font size="8">トリックオアトリート!!</font></p>
+<p><font size="3">どもっす、どらけーです。</font></p>
 <p><font size="3">えーっと、初投稿となると何喋ればええんか分からんくなりますね、まあまずは</font></p>
 <p><font size="8">ホームページ公開！！</font></p>
 <p><font size="3">ということでね、最初のブロマガは私が担当します</font></p>
