--- a/nez1.html
+++ b/nez1.html
@@ -26,7 +26,7 @@
 </header>
 
 <div class="box2">
-    <div class="box-title">ホームページ開設おめでとうございます!  執筆者：ねず〜</div>
+    <div class="box-title">ホームページ開設おめでとうございます!  執筆者：ねず〜　　　2022 11/1</div>
     
 <p><font size="3">どうも皆様こんにちは! ねず〜と申します!</font></p>
 <p><font size="3">ラナンスターのホームページが無事完成したということで!</font></p>
