--- a/dk2.html
+++ b/dk2.html
@@ -26,7 +26,7 @@
 </header>
 
 <div class="box2">
-    <div class="box-title">恋バナにハマった  執筆者：どらけー　　　2022 11/1</div>
+    <div class="box-title">恋愛ものの漫画にハマった  執筆者：どらけー　　　2022 11/1</div>
     
 <p><font size="3">ども、どらけーです</font></p>
 <p><font size="3">11月に入りましたね、いよいよ今年も終わりに近づいてきたなーって思います。</font></p>
