--- a/dk_burogu.html
+++ b/dk_burogu.html
@@ -34,6 +34,7 @@
     <div class="box-title">どらけーの呟き</div>
         
 <a href="dk1.html">祝　ホームページ開設</a>
+<a href="dk2.html">恋愛ものの漫画にハマった</a>
         
 </div>
 
