--- a/dk2.html
+++ b/dk2.html
@@ -30,19 +30,19 @@
     
 <p><font size="3">ども、どらけーです</font></p>
 <p><font size="3">11月に入りましたね、いよいよ今年も終わりに近づいてきたなーって思います。</font></p>
-<p><font size="3">11月といえば、最近近くの高校は文化祭をやってました</font></p>
-<p><font size="3">はい、</font><font size="5">何らかのパワーで恋人が出来やすい</font><font size="3">文化祭です。</font></p>
-<p><font size="3">私はこの現象に文化祭マジックという名前をつけました</font></p>
+<p><font size="3">11月といえば、最近俺の友人の通う高校で文化祭があったな。残念なことに生徒限定で外部生の俺は入れへんかったけどな</font></p>
+<p><font size="3">はい、</font><font size="8">何らかのパワーで恋人が出来やすい</font><font size="3">文化祭です。</font></p>
+<p><font size="3">私はこの謎の現象に「文化祭マジック」という名前をつけました</font></p>
 <p><font size="3">恋心を持つ少年少女にとっては文化祭ってクリスマス前の最後のチャンスですよね</font></p>
-<p><font size="5">私の文化祭は女友達が増えただけなんですけどね</font></p>
+<p><font size="6">まあ俺の文化祭は女友達が増えただけやったんやけどな</font></p>
 <p><font size="3">気持ち悪なってきたから文化祭の話はやめる</font></p>
-<p><font size="3">結局、僕が味わえなかった恋愛パワーは漫画で埋め合わせようという結論に至りました</font></p>
+<p><font size="3">結局、俺が学校生活で味わえなかった恋愛パワーは小説や漫画など、本で埋め合わせようという結論に至りました</font></p>
 <p><font size="3">そういうわけで手始めに「かぐや様は告らせたい」に手を出したんですけど</font></p>
 <p><font size="8">かぐや様可愛すぎんか???</font></p>
-<p><font size="3">ほんとは1巻だけ読むつもりだったんですけど面白いし可愛いし</font></p>
-<p><font size="5">結局16巻まで買っちゃいました</font></p>
-<p><font size="3">あんまり他の女の子の話をするとキアラさんを筆頭に私の女性ファンが怒り狂いそうなのでこの辺りにしましょう</font></p>
-<p><font size="3">さ、動画の話だ</font></p>
+<p><font size="3">まあ僕は柏木さんの方が好きなんですけど...</font></p>
+<p><font size="3">ほんとは1巻だけ読むつもりだったんですけど面白いし可愛いし</font></p><p><font size="5">結局16巻まで買っちゃいました</font></p>
+<p><font size="3">あんまり他の女の子の話をするとキアラさんを筆頭に女性ファンが怒り狂いそうなのでこの辺りにしておこう...</font></p>
+<p><font size="3">さあ、動画の話だ</font></p>
     
 </div>
 
