--- a/dk2.html
+++ b/dk2.html
@@ -31,9 +31,9 @@
 <p><font size="3">ども、どらけーです</font></p>
 <p><font size="3">11月に入りましたね、いよいよ今年も終わりに近づいてきたなーって思います。</font></p>
 <p><font size="3">11月といえば、最近俺の友人の通う高校で文化祭があったな。残念なことに生徒限定で外部生の俺は入れへんかったけどな</font></p>
-<p><font size="3">はい、</font><font size="8">何らかのパワーで恋人が出来やすい</font><font size="3">文化祭です。</font></p>
-<p><font size="3">私はこの謎の現象に「文化祭マジック」という名前をつけました</font></p>
-<p><font size="3">恋心を持つ少年少女にとっては文化祭ってクリスマス前の最後のチャンスですよね</font></p>
+<p><font size="5">はい、</font><font size="8">不思議な力によって恋人が出来やすくなる</font><font size="5">あの、文化祭です。</font></p>
+<p><font size="3">私はこの謎の現象に「文化祭マジック」という名前をつけました。放っておくと世界がリア充で埋め尽くされる世界終焉シナリオを引き起こします</font></p>
+<p><font size="3">まあ、恋心を持つ少年少女にとっては文化祭ってクリスマス前の最後のチャンスですよね</font></p>
 <p><font size="6">まあ俺の文化祭は女友達が増えただけやったんやけどな</font></p>
 <p><font size="3">気持ち悪なってきたから文化祭の話はやめる</font></p>
 <p><font size="3">結局、俺が学校生活で味わえなかった恋愛パワーは小説や漫画など、本で埋め合わせようという結論に至りました</font></p>
