--- a/dk1.html
+++ b/dk1.html
@@ -25,7 +25,7 @@
   </div>
 </header>
 
-<div class="box2">
+<div class="box_dk">
     <div class="box-title">祝 ホームページ公開!!  執筆者：どらけー　　　2022 10/31</div>
 
 <p><font size="8">トリックオアトリート!!</font></p>
