--- a/dk2.html
+++ b/dk2.html
@@ -25,7 +25,7 @@
   </div>
 </header>
 
-<div class="box2">
+<div class="box_dk">
     <div class="box-title">恋愛ものの漫画にハマった  執筆者：どらけー　　　2022 11/1</div>
     
 <p><font size="3">ども、どらけーです</font></p>
