--- a/nez1.html
+++ b/nez1.html
@@ -25,7 +25,7 @@
   </div>
 </header>
 
-<div class="box2">
+<div class="box_nez">
     <div class="box-title">ホームページ開設おめでとうございます!  執筆者：ねず〜　　　2022 11/1</div>
     
 <p><font size="3">どうも皆様こんにちは! ねず〜と申します!</font></p>
