--- a/membership.html
+++ b/membership.html
@@ -56,6 +56,8 @@
 
 <a href="kuro_burogu.html" class="btn btn--orange btn--cubic btn--shadow">くろっくのつぶやき (0)</a>
 
+<a href="kiara_burogu.html" class="btn btn--orange btn--cubic btn--shadow">キアラのつぶやき (1)</a>
+
 <p><font size="3">感想はtwitterにて #ラナン タグをつけて投稿お願いします!!</font></p>
         
 </div>
