--- a/kiara_burogu.html
+++ b/kiara_burogu.html
@@ -25,25 +25,25 @@
   </div>
 </header>
 
-<div class="box_dk">
-    <div class="box-title">とある編集者の苦難#1  執筆者：キアラ　　　2022 11/2</div>
+<div class="box_kiara">
+    <div class="box-title">おひとり女子会#1  執筆者：キアラ　　　2022 11/2</div>
 
 
-<p><font size="3">どうも皆様ご機嫌よう。</font></p>
+<p><font size="3">どうも皆様こんばんは、そして始めまして。</font><font size="3",color="#ff99ee">キアラで御座います。</font></p>
+<p><font size="3">キャラクターとしてではなく、中の人として皆様に語りかけるのは初めてなので緊張しています(＞　＜;)</font></p>
+<p><font size="3">どらけーから「編集者の人も書いていいよ！」と許可を頂いたので、折角だし書こうと思い今こうして書かせて頂いております。</font></p>
+<p><font size="5">（メンバーの皆様よりも先に書いてしまいました。本当に申し訳ないです、でも書きたかったんです・・・。）</font></p>
+<p><font size="3">どらけーが恋愛ものの漫画にハマった話をしていたので、私も便乗して、アニメの話をしようと思います。</font></p>
+<p><font size="3">皆様</font><font size="5">Re:ゼロから始める異世界生活</font><font size="3">というアニメをご存知ですか？</font></p>
+<p><font size="3">少しあらすじを話します。主人公のナツキ・スバルが、コンビニに寄った帰りに突然異世界へと召喚されて始まるアニメです。</font></p>
+<p><font size="3">「死に戻り」という能力を使いながら、その世界で出会った女の子と幸せに暮らすために、様々な苦難を乗り越えるなんてカッコいいですよね。</font></p>
+<p><font size="5">どうでもいい話にはなってしまいますが、どらけーが異世界転生と間違えていたので叱っておきました。</font></p>
+<p><font size="3">リゼロの中でも私が特に好きなキャラはラムちゃんです。なんででしょう、ツンデレな姿が私に重なったのかもしれません。</font></p>
+<p><font size="3">同じ女の子ということで、いつかしなききさんと好きなアニメについて語ったりしたいな、なんて希望もあったりします。</font></p>
+<p><font size="5">このまま雑談を長々と続けて、コピペするどらけーを困らせてやってもいいんですが</font></p>
+<p><font size="3">今度書くときのネタが無くなってしまいそうなので雑談はここらで終了にします。</font></p>
 
-<p><font size="3">えーっと、初投稿となると何喋ればええんか分からんくなりますね、まあまずは</font></p>
-<p><font size="8">ホームページ公開！！</font></p>
-<p><font size="3">ということでね、最初のブロマガは私が担当します</font></p>
-<p><font size="3">今回はラナンスターの動画編集のことについてでも喋りましょうか</font></p>
-<p><font size="5">実はラナンスターの動画って、活動開始の半年くらい前からちょっとずつ作ってたんですよ</font></p>
-<p><font size="3">確か10月ごろやろか?　「実績王は誰だ」という動画の編集が一番記憶に残ってます</font></p>
-<p><font size="5">3分の努力を3秒で全て失うレンドリー面白かったですね(笑)</font></p>
-<p><font size="3">オープニング制作が遅れて他の編集担当に怒られたり...</font></p>
-<p><font size="3">編集が間に合わなくてキアラさんに圧かけられたり...</font></p>
-<p><font size="3">編集が間に合わなくてともるんに圧かけられたり...</font></p>
-<p><font size="3">いろいろあったなぁ...うん、この話やめよか</font></p>
-
-<p><font size="3">ということで、さっき話題に上げた実績王は誰だについて話します</font></p>
+<p><font size="3">どうやら後半ではお気に入りの動画を一本紹介するようなので、私は、自己紹介動画について話そうと思います</font></p>
     
 </div>
 
