--- a/dk_burogu.html
+++ b/dk_burogu.html
@@ -30,7 +30,7 @@
 </div>
 	
         
-<div class="box2">
+<div class="box_dk">
     <div class="box-title">どらけーの呟き</div>
 
 <a href="dk2.html">【#2】恋愛ものの漫画にハマった</a>
