--- a/nez_burogu.html
+++ b/nez_burogu.html
@@ -30,7 +30,7 @@
 </div>
 	
         
-<div class="box2">
+<div class="box_nez">
     <div class="box-title">ねず〜の呟き</div>
         
 <a href="nez1.html">【#1】ホームページ開設おめでとうございます!</a>
