--- a/kiara_burogu.html
+++ b/kiara_burogu.html
@@ -31,7 +31,7 @@
 	
         
 <div class="box_kiara">
-    <div class="box-title">どらけーの呟き</div>
+    <div class="box-title">キアラの呟き</div>
 
 <a href="kiara1.html">【#1】おひとり女子会#1</a>
         
