--- a/kiara1.html
+++ b/kiara1.html
@@ -29,7 +29,7 @@
     <div class="box-title">おひとり女子会#1  執筆者：キアラ　　　2022 11/2</div>
 
 
-<p><font size="3">どうも皆様こんばんは、そして始めまして。</font><font size="3",color="#ff99ee">キアラで御座います。</font></p>
+<p><font size="3">どうも皆様こんばんは、そして始めまして。</font><font color="#ff99ee">キアラで御座います。</font></p>
 <p><font size="3">キャラクターとしてではなく、中の人として皆様に語りかけるのは初めてなので緊張しています(＞　＜;)</font></p>
 <p><font size="3">どらけーから「編集者の人も書いていいよ！」と許可を頂いたので、折角だし書こうと思い今こうして書かせて頂いております。</font></p>
 <p><font size="5">（メンバーの皆様よりも先に書いてしまいました。本当に申し訳ないです、でも書きたかったんです・・・。）</font></p>
