--- a/dk_burogu.html
+++ b/dk_burogu.html
@@ -33,6 +33,7 @@
 <div class="box_dk">
     <div class="box-title">どらけーの呟き</div>
 
+<a href="dk3.html">【#3】二度寝</a>
 <a href="dk2.html">【#2】恋愛ものの漫画にハマった</a>
 <a href="dk1.html">【#1】祝　ホームページ開設</a>
         
