--- a/dk3.html
+++ b/dk3.html
@@ -48,8 +48,8 @@
   
         <div class="box28">
         <span class="box-title">【暗殺者を探せ】毎晩一人ずつ消えていく...暗殺者は誰だ...　【前編】</span>
-      
- <iframe width="560" height="315" src="https://www.youtube.com/watch?v=T2wduHCv7ag" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+     
+ <iframe width="560" height="315" src="https://www.youtube.com/embed/T2wduHCv7ag" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
 
 <p><font size="3">サムネから殺意しか伝わってこないですね。</font></p>
