--- a/dk3.html
+++ b/dk3.html
@@ -56,14 +56,14 @@
 <p><font size="3">自分で言うのもなんですが凄く上手く立ち回れた試合なので編集も気合入ってました</font></p>
 <p><font size="2">それでも最後負けたんですけどね(ボソッ</font></p>
 <p><font size="3">そしてこの動画は最後まで見た上で、もう一度見返してみると更に面白いシーンが見えるように編集してみました</font></p>
-<p><font size="5">特に暗殺者二人と富豪が同じ部屋にいるなんてもう爆笑もんですね</font></p>
+<p><font size="6">特に暗殺者二人と富豪が同じ部屋にいるなんてもう爆笑もんですね</font></p>
 <p><font size="3">俺は「この動画絶対使おう」と思いながらニヤついてました、レンドリーも同じだと思います</font></p>
 <p><font size="3">らすくさんも嘘の透明発見情報を出してくれたり、事故にしか見えない殺し方で一人倒してくれたりして心強かったな</font></p>
 <p><font size="4">無敵Pを飲んだ後、わざと即死剣で殴られて死んだふりをしたり、毎回ネタを作りつつも頭脳プレイを見せる彼には感謝</font></p>
 
 <p><font size="3">やってる最中は、レンドリーがグレーの人を次々殺していくから、「俺が確白殺らないとダメだな」と動いてたのは覚えてる</font></p>
 <p><font size="3">まあこれは、お互いのやりたい事を理解しているからこそできた連携やな</font></p>
-<p><font size="3">それとねず〜さんがレンドリーに襲われたけど生還した時、理不尽に怪しいから倒す方向に話持って行ってごめんね。</font></p>
+<p><font size="3">それとねず〜さん!!　レンドリーに襲われたけど生還した時、俺が理不尽に「怪しいから倒す」方向に話持って行ってごめんね。</font></p>
 <p><font size="3">もうグレーがねず〜さんとみけしか居なかったからラインの線を疑われる前にやらないといけなかったんだ...!!</font></p>
 
 </div>
