--- a/tomo_burogu.html
+++ b/tomo_burogu.html
@@ -33,7 +33,7 @@
 <div class="box_tom">
     <div class="box-title">ともるんの呟き</div>
 
-<a href="tom1.html">【#1】はようございます</a>
+<a href="tom1.html">【#1】おはようございます</a>
         
 </div>
 
