--- a/kiara_burogu.html
+++ b/kiara_burogu.html
@@ -33,6 +33,7 @@
 <div class="box_kiara">
     <div class="box-title">キアラの呟き</div>
 
+<a href="kiara2.html">【#2】おひとり女子会#2</a>
 <a href="kiara1.html">【#1】おひとり女子会#1</a>
         
 </div>
