--- a/kiara2.html
+++ b/kiara2.html
@@ -43,7 +43,7 @@
         <div class="box28">
         <span class="box-title">【検証】可愛いメイド服スキンでアピったらどんな反応をするのか</span>
      
- <iframe width="560" height="315" src="https://www.youtube.com/embed/T2wduHCv7ag" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/o1ptV6T0e-c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
     
 <p><font size="3">こちらはおよそ2年前に、どらけーチャンネルで公開された動画になります。</font></p>
