--- a/kiara2.html
+++ b/kiara2.html
@@ -34,7 +34,7 @@
 <p><font size="3">私は最近Vtuberにハマりました。ここで名前が出せないのが残念です・・・。</font></p>
 <p><font size="3">そういえば先日、どらけーと通話をしていたのですが、その時に少しからかおうと思い</font></p>
 <p><font size="5">冗談で「FANZAとかで最近買った作品のタイトルとか教えてくれる?」</font></p>
-<p><font size="3">と会話を切り出してみたのですが、</font><font size="5">普通に返答が来て</font><font size="3">目が点になりましたʕ•ᴥ•ʔ/font></p>
+<p><font size="3">と会話を切り出してみたのですが、</font><font size="5">普通に返答が来て</font><font size="3">目が点になりましたʕ•ᴥ•ʔ</font></p>
 <p><font size="3">ちなみに彼のオススメは「KentoOkayama」さんらしいです。</font></p><p><font size="1">この変態め</font></p>
 <p><font size="3">私は「きぃら〜」さんという方の絵が大好きです。皆様も是非読んでみてください。表情がかわいいんです。</font></p>
 <p><font size="3">すみません。少しお下品な話になってしまいましたm(_ _)m</font></p>
