--- a/kiara2.html
+++ b/kiara2.html
@@ -51,7 +51,7 @@
 <p><font size="5">普通に気持ち悪いですよね。</font></p>
 <p><font size="3">ちなみにこの時代のツッコミ役の水色字幕のキャラクターは私をモチーフにしたようです。</font></p>
 <p><font size="3">前回リゼロの話をさせてもらったと思うのですが、当時私はメイドにハマっておりまして</font></p>
-<p><font size="3">その影響下で、どらけーチャンネルに出る時はメイドキャラでもいいな...と思ったことで今に至ります。</font></p>
+<p><font size="3">その影響下で、この動画を見てしまったことで、どらけーチャンネルに出る時はメイドキャラでもいいな...と思ったことで今に至ります。</font></p>
 <p><font size="3">どらけーのメイド、吸血鬼、という設定は辻褄を合わせる為に後からあいつが付け足したものです。</font></p>
 <p><font size="5">ツンデレは多分彼の趣味です（ボソッ）</font></p>
 <p><font size="3">次回はどらけーと一緒に動画に出るようになった経緯でもお話ししようかと思います。</font></p>
