--- a/guideline.html
+++ b/guideline.html
@@ -33,7 +33,7 @@
     <div class="box-title">1.はじめに</div>
 
 <p><font size="4">ラナンスターは、視聴者様による二次創作活動を応援いたします。</font></p>
-<p><font size="4">ラナンスター及び、ラナンメンバーが公開する動画の「切り抜き」や「ファンアート」などを皆様が安心して行えるよう、ガイドラインを策定いたしました。</font></p>
+<p><font size="4">ラナンスター、ラナンメンバーが公開する動画の「切り抜き」「ファンアート」などを皆様が安心して行えるよう、ガイドラインを策定いたしました。</font></p>
 <p><font size="4">本ガイドラインは、公の場でのみ適用されるガイドラインです。個人間での娯楽などに関して、本ガイドラインは適応されません。</font></p>
 <p><font size="5">各々の倫理観に従い、節度のある創作活動をお願いします。ご理解とご協力のほど、よろしくお願いいたします。</font></p>
         
@@ -42,7 +42,7 @@
 <div class="box2">
     <div class="box-title">2.切り抜き動画について</div>
 
-<p><font size="5">※切り抜きとは、ラナンメンバーが公開した元動画を、視聴者が追加で加工や編集を施し、新たな動画を制作することを指します。</font></p>
+<p><font size="5">※切り抜きとは、すでに公開されている動画を、第三者が編集して要点だけ切り抜いた動画を指します</font></p>
 <p><font size="4">ラナンスターは、本ガイドラインを厳守した切り抜き動画の制作、公開については許諾しております。</font></p>
 <p><font size="4">ご理解とご協力のほど、よろしくお願いいたします</font></p>
 <p> </p>
