--- a/guideline.html
+++ b/guideline.html
@@ -65,23 +65,23 @@
 
 <p><b><font size="5">切り抜き動画制作上の禁止事項</font></b></p>
 
-<p><font size="4">元動画での表現や意図を、誤解が生じる内容に故意に改変すること。</font></p>
-<p><font size="4">ラナンスターの動画と、動画の内容に関係ない第三者の動画の切り抜きなどを組み合わせること。</font></p>
-<p><font size="4">ラナンスター、ラナンメンバーの名誉を毀損、個人を侮辱するなどの表記や音声などの編集をすること。</font></p>
-<p><font size="4">真実と異なるか、真偽が分からない内容の表記や音声を加えること。</font></p>
-<p><font size="4">第三者の著作権、肖像権、その他の権利を害する編集をすること。</font></p>
-<p><font size="4">第三者の氏名、商品やサービスの広告、宣伝、販売促進などの目的で制作をすること。</font></p>
-<p><font size="4">法または公序良俗に反する内容を表現すること。</font></p>
-<p><font size="4">切り抜き動画を収益化すること</font></p>
+<p><font size="4">①元動画での表現や意図を、誤解が生じる内容に故意に改変すること。</font></p>
+<p><font size="4">②ラナンスターの動画と、動画の内容に関係ない第三者の動画の切り抜きなどを組み合わせること。</font></p>
+<p><font size="4">③ラナンスター、ラナンメンバーの名誉を毀損、個人を侮辱するなどの表記や音声などの編集をすること。</font></p>
+<p><font size="4">④真実と異なるか、真偽が分からない内容の表記や音声を加えること。</font></p>
+<p><font size="4">⑤第三者の著作権、肖像権、その他の権利を害する編集をすること。</font></p>
+<p><font size="4">⑥第三者の氏名、商品やサービスの広告、宣伝、販売促進などの目的で制作をすること。</font></p>
+<p><font size="4">⑦法または公序良俗に反する内容を表現すること。</font></p>
+<p><font size="4">⑧切り抜き動画を収益化すること</font></p>
 
 <p> </p>
 
 <p><b><font size="5">切り抜き動画制作上の注意点</font></b></p>
 
-<p><font size="4">切り抜き動画投稿時はタイトルに「切り抜き」と明記する必要がある。</font></p>
-<p><font size="4">切り抜き動画投稿時は概要欄に切り抜き元動画のURLを記載する必要がある。</font></p>
-<p><font size="4">公開した切り抜き動画に対して、ラナンスター、ラナンメンバーから削除や修正を指示した場合は直ちに従わなければならない。</font></p>
-<p><font size="4">上記の場合において、ラナンスターは指示を行う理由を説明する義務を負わない。</font></p>
+<p><font size="4">①切り抜き動画投稿時はタイトルに「切り抜き」と明記する必要がある。</font></p>
+<p><font size="4">②切り抜き動画投稿時は概要欄に切り抜き元動画のURLを記載する必要がある。</font></p>
+<p><font size="4">③公開した切り抜き動画に対して、ラナンスター、ラナンメンバーから削除や修正を指示した場合は直ちに従わなければならない。</font></p>
+<p><font size="4">④上記の場合において、ラナンスターは指示を行う理由を説明する義務を負わない。</font></p>
 
 </div>
         
