--- a/guideline.html
+++ b/guideline.html
@@ -105,7 +105,7 @@
 
 <p><font size="4">コミックマーケットやインターネットを利用した同人誌や二次創作グッズの販売は、趣味の範囲内の活動であれば許可します。</font></p>
 <p><font size="4">しかし、その販売行為を、ファン活動を超えた事業活動として行ってはならないものとします。</font></p>
-<p><font size="4">また、ラナンスターのコンテンツを、そのままコピーする行為によって製造された物は、二次創作作品ではないため、これを販売する行為は禁止します。</font></p>
+<p><font size="4">ラナンスターのコンテンツを、そのままコピーする行為によって製造された物は、二次創作作品ではないため、これを販売する行為は禁止します。</font></p>
 <p><font size="4">その販売行為が、事業活動に該当すると判断した場合、その販売行為の停止を指示します。</font></p>
 
 <p> </p>
