--- a/guideline.html
+++ b/guideline.html
@@ -78,9 +78,8 @@
 <p><font size="4">③ラナンスター、ラナンメンバーの名誉を毀損、個人を侮辱するなどの表記や音声などの編集をすること。</font></p>
 <p><font size="4">④真実と異なるか、真偽が分からない内容の表記や音声を加えること。</font></p>
 <p><font size="4">⑤第三者の著作権、肖像権、その他の権利を害する編集をすること。</font></p>
-<p><font size="4">⑥第三者の氏名、商品やサービスの広告、宣伝、販売促進などの目的で制作をすること。</font></p>
-<p><font size="4">⑦法または公序良俗に反する内容を表現すること。</font></p>
-<p><font size="4">⑧切り抜き動画を収益化すること</font></p>
+<p><font size="4">⑥法または公序良俗に反する内容を表現すること。</font></p>
+<p><font size="4">⑦切り抜き動画を収益化すること</font></p>
 
 <p> </p>
 
