--- a/contact.html
+++ b/contact.html
@@ -11,14 +11,13 @@
   <nav class="navigation">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="news.html">News</a></li>
       <li><a href="member.html">Members</a></li>
       <li><a href="videos.html">Videos</a></li>
       <li><a href="history.html">History</a></li>
       <li><a href="goods.html">Goods</a></li>
       <li><a href="guideline.html">Guideline</a></li>
       <li><a href="membership.html">Membership</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="contact.html">contact</a></li>
     </ul>
   </nav>
   <div class="title-wrapper">
