--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
       <li><a href="goods.html">Goods</a></li>
       <li><a href="guideline.html">Guideline</a></li>
       <li><a href="membership.html">Membership</a></li>
-      <li><a href="contact.html">contact</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
   <div class="title-wrapper">
