--- a/index.html
+++ b/index.html
@@ -26,5 +26,13 @@
 <img src="home.png">
 </div>
         
+<iframe id="inlineFrameExample"
+    title="Inline Frame Example"
+    width="300"
+    height="200"
+    src="https://twitter.com/affect_dkrs">
+</iframe>
+
+        
 </body>
 </html>
