--- a/index.html
+++ b/index.html
@@ -26,12 +26,7 @@
 <img src="home.png">
 </div>
         
-<iframe id="inlineFrameExample"
-    title="Inline Frame Example"
-    width="300"
-    height="200"
-    src="https://twitter.com/affect_dkrs">
-</iframe>
+<a class="twitter-timeline" href="https://twitter.com/affect_dkrs?ref_src=twsrc%5Etfw">Tweets by affect_dkrs</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
         
 </body>
