--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
 <img src="home.png">
 </div>
         
-<a class="twitter-timeline" href="https://twitter.com/affect_dkrs?ref_src=twsrc%5Etfw">Tweets by affect_dkrs</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
+<a class="twitter-timeline" href="https://twitter.com/affect_dkrs/lists/1642147864905392128?ref_src=twsrc%5Etfw">A Twitter List by affect_dkrs</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
         
 </body>
 </html>
